# Johnner

./: .gitignore  CMakeLists.txt  NOTE  README.md  RECORD.md  bestseed.txt  build_johnner.bat  main.code-workspace  prettygoodseeds.txt  run_engine.bat  run_johnner.bat  run_perft.bat  run_uci.bat
src/: CMakeLists.txt  bitboard.cpp  bitboard.h  bithelpers.h  board.cpp  board.h  engine.cpp  engine.h  eval.h  macros.cpp  macros.h  main.cpp  main_uci.cpp  movegen.cpp  movegen.h  perft.cpp  perft.h  perft_test.cpp  renderer.cpp  renderer.h  search.cpp  search.h  str_util.h  texture_manager.h  tree.h  types.cpp  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
